--- a/data/projects.json
+++ b/data/projects.json
@@ -17,7 +17,7 @@
   {
     "uuid": 3,
     "fullTitle": "SG Oppenweiler Strümpfelbach",
-    "desc": "BEntwicklung eines Corporate Designs sowie darauf aufbauend die Konzeption und Umsetzung einer Sponsorenmappe für die SG Oppenweiler-Strümpfelbach.",
+    "desc": "Entwicklung eines Corporate Designs sowie darauf aufbauend die Konzeption und Umsetzung einer Sponsorenmappe für die SG Oppenweiler-Strümpfelbach.",
     "img": "/images/Mockup_Sponsorenmappe.png",
     "link": "https://www.sgos.de/"
   }
